# tb3_semantic_mapping

./: CMakeLists.txt  package.xml
launch/: d435.launch  rtabmap.launch  tb3_semantic_mapping.launch  turtlebot3_d435_bringup.launch  yolo_pcl.launch
scripts/: detection_collector.py  detection_publisher.py  yolov8_detector.py
scripts/launch/: d435.launch  yolo_pcl.launch
scripts/scripts/: detection_publisher.py
