<?xml version="1.0"?>
<package format="2">
  <name>tb3_semantic_mapping</name>
  <version>0.0.0</version>
  <description>TurtleBot3 Semantic Mapping with YOLOv8 and RTAB-Map</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>